--- a/TP01a_HelloWolrd/.project
+++ b/TP01a_HelloWolrd/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP01a_HelloWolrd</name>
+	<name>TP01a_HelloWorld</name>
 	<comment></comment>
 	<projects>
 	</projects>
